changed to single chart, fixed spacing with title

--- a/components/layout/Hometitle.module.css
+++ b/components/layout/Hometitle.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   color: #014f86;
-
+  margin-top: 10vh;
 }
 
 .title {
